--- a/lib/assets/_primary_themes.scss
+++ b/lib/assets/_primary_themes.scss
@@ -7,6 +7,7 @@
 .btn-primary,
 .btn-primary:visited,
 .btn-primary i {
+  border-radius: 30px;
   background-color: $primary-color !important;
   border-color: $primary-color !important;
   color: white !important;
