--- a/app/views/errors/bigbluebutton_error.html.erb
+++ b/app/views/errors/bigbluebutton_error.html.erb
@@ -14,7 +14,7 @@
 %>
 
 <div class="container text-center pt-9">
-  <div class="display-1 text-muted mb-5"><%= t("errors.bigbluebutton.title") %></div>
-  <h1 class="h2 mb-3"><%= t("errors.bigbluebutton.message") %></h1>
-  <p class="h4 text-muted font-weight-normal mb-7"><%= t("errors.bigbluebutton.help", doc_link: "http://docs.bigbluebutton.org/greenlight/gl-install.html#setting-bigbluebutton-credentials").html_safe %></p>
+  <div class="display-1 text-muted mb-5"><%= t("errors.pat3.title") %></div>
+  <h1 class="h2 mb-3"><%= t("errors.pat3.message") %></h1>
+  <p class="h4 text-muted font-weight-normal mb-7"><%= t("errors.pat3.help", doc_link: "https://pat3.com").html_safe %></p>
 </div>
