--- a/app/views/main/components/_features.html.erb
+++ b/app/views/main/components/_features.html.erb
@@ -16,26 +16,26 @@
 
 <div class="container mt-8 mb-6 text-center">
 
-  <h2 class="mb-6">Greenlight <%= t("features.title") %></h2>
+  <div style='display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;'>
+        <%= image_tag('center_image.png') %>
+      <% if current_user %>
 
-  <div class="row feature-stamp">
-    <div class="col-lg-3 col-md-6">
-      <div class="feature-item">
-        <div class="stamp bg-primary"><i class="fas fa-chalkboard-teacher fa-2x"></i></div>
-        <h4 class="mt-4"><%= t("features.rooms") %></h4>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-      <span class="stamp bg-primary"><i class="fas fa-film fa-2x"></i></span>
-      <h4 class="mt-4"><%= t("features.recordings") %></h4>
-    </div>
-    <div class="col-lg-3 col-md-6">
-      <span class="stamp bg-primary"><i class="fas fa-pencil-alt fa-2x"></i></span>
-      <h4 class="mt-4"><%= t("features.designs") %></h4>
-    </div>
-    <div class="col-lg-3 col-md-6">
-      <span class="stamp bg-primary"><i class="fas fa-door-open fa-2x"></i></span>
-      <h4 class="mt-4"><%= t("features.authentication") %></h4>
-    </div>
+        <% else %>
+          <% allow_greenlight_accounts = allow_greenlight_accounts? %>
+          <% if allow_greenlight_accounts %>
+            <%= link_to t("login"), signin_path, :class => "btn btn-primary mx-2 sign-in-button" ,:style => "border-radius:30px; margin-top: 50px;" %>
+          <% elsif Rails.configuration.loadbalanced_configuration %>
+            <%= link_to t("login"), omniauth_login_url(:bn_launcher), :class => "btn btn-primary mx-2 sign-in-button" ,:style => "border-radius:30px; margin-top: 50px;" %>
+          <% else %>
+            <%= link_to t("login"), signin_path, :class => "btn btn-primary mx-2 sign-in-button" ,:style => "border-radius:30px; margin-top: 50px;" %>
+          <% end %>
+
+          <% if allow_user_signup? && allow_greenlight_accounts %>
+            <%= link_to t("signup.title"), signup_path, :class => "btn btn-primary mx-2 sign-in-button" ,:style => "border-radius:30px; margin-top: 50px;" %>
+          <% end %>
+        <% end %>
   </div>
 </div>
