--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -13,15 +13,14 @@
 # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 %>
 
-<div class="background">
-  <div class="container pt-9 pb-8">
+<div class="background" style="background: linear-gradient(94.11deg, #174489 -2.09%, #00A3DA 102.08%);">
+  <div class="container pt-9 pb-8" style="color:#ffffff">
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
-        <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome").html_safe %></h1>
-        <p class="lead offset-lg-2 col-lg-8 col-sm-12 "><%= t("landing.about", href: link_to(t("greenlight"), "https://bigbluebutton.org/2018/07/09/greenlight-2-0/", target: "_blank", rel: "noopener")).html_safe %></p>
-        <%= link_to "https://youtu.be/Hso8yLzkqj8", target: "_blank" do %>
-          <h4><%= t("landing.video") %> <i class="far fa-play-circle ml-1"></i></h4>
-        <% end %>
+        <h1 id="main-text" class="display-4 mb-4" style="font-style: normal;
+font-weight: bold;
+font-size: 94px;"> <%= t("landing.welcome").html_safe %></h1>
+        <p class="lead offset-lg-2 col-lg-8 col-sm-12 "><%= t("landing.about", href: link_to(t("greenlight"), "", target: "_blank", rel: "noopener",:style=> "color:#FFFFFF !important;")).html_safe %></p>
       </div>
 
     </div>
